Merapikan Semua layout

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -64,27 +64,20 @@
                     android:id="@+id/tvEstimasi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Estimasi"
+                    android:text="@string/EstimasiHariIni"
                     android:fontFamily="@font/poppinssemibold"
-                    android:textSize="18sp"
+                    android:textSize="14sp"
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/estimation_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Rp "
                     android:fontFamily="@font/poppinssemibold"
-                    android:textSize="15sp"
+                    android:textSize="13sp"
                     android:textColor="#FF5722"
                     android:layout_marginStart="60dp"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="40.000,-"
-                    android:fontFamily="@font/poppinssemibold"
-                    android:textSize="18sp"
-                    android:textColor="#FF5722" />
 
             </LinearLayout>
 
