--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,22 +70,14 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/estimation_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rp "
                 android:fontFamily="@font/poppinssemibold"
-                android:textSize="15sp"
+                android:textSize="17sp"
                 android:textColor="#FF5722"
                 android:layout_marginStart="60dp"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="40.000,-"
-                android:fontFamily="@font/poppinssemibold"
-                android:textSize="18sp"
-                android:layout_marginStart="10dp"
-                android:textColor="#FF5722" />
 
         </LinearLayout>
 
@@ -144,7 +136,6 @@
 
                     <LinearLayout
                         android:layout_width="90dp"
-
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:gravity="center"
@@ -208,7 +199,7 @@
         android:id="@+id/tvMotivation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Siap melayani pelanggan dengan setulus hati"
+        android:text="@string/tvMotivation"
         android:textSize="15sp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center"
@@ -222,7 +213,7 @@
         android:id="@+id/tvSubText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Jangan Kecewakan Pelanggan"
+        android:text="@string/tvSubText"
         android:textSize="15sp"
         android:gravity="center"
         android:fontFamily="@font/poppinsmediumitalic"
