--- a/app/src/main/res/layout/card_laporan.xml
+++ b/app/src/main/res/layout/card_laporan.xml
@@ -20,6 +20,15 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/tvAngka"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/poppinsmedium"
+                android:text="[-]"
+                android:textSize="14sp" />
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
