--- a/app/src/main/res/layout-land/activity_account.xml
+++ b/app/src/main/res/layout-land/activity_account.xml
@@ -142,6 +142,7 @@
                         android:background="#CCCCCC" />
 
                     <TextView
+                        android:id="@+id/tvchange_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="16dp"
